--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="bootstrap-5.2.0-dist/css/bootstrap.css">
         <link rel="stylesheet" href="fontello-de9a3836/css/fontello.css">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <title>Bootstrap</title>
     </head>
@@ -15,26 +16,26 @@
       <header class="header">
         <nav class="navbar navbar-expand-lg navbar-inverse" style="background:#2d2d2d;">
             <div class="container">
-              <a class="navbar-brand" href="#" style="color: #f85c37;">PROGER <i class="icon-globe"></i></a>
+              <a class="navbar-brand fs-1" href="#" style="color: #f85c37;">PROGER <i class="icon-globe"></i></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" style="color: #f85c37;" aria-current="page" href="#">Домой</a>
+                  <li class="nav-item pe-2">
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#">Домой</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" style="color: #f85c37;" aria-current="page" href="#">Про нас</a>
+                  <li class="nav-item pe-2">
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#">Про нас</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" style="color: #f85c37;" aria-current="page" href="#">Сервисы</a>
+                  <li class="nav-item pe-2">
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#">Сервисы</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" style="color: #f85c37;" aria-current="page" href="#">Работы</a>
+                  <li class="nav-item pe-2">
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#">Работы</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" style="color: #f85c37;" aria-current="page" href="#"><i class="icon-camera nav-icon"></i></a>
+                  <li class="nav-item pe-2">
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#"><i class="icon-camera nav-icon"></i></a>
                   </li>
                     </ul>
               </div>
@@ -45,7 +46,7 @@
         <!-- Секция 1 -->
         <section class="headerwrap">
           <div class="container">
-            <div class="row centered">
+            <div class="row text-center">
               <div class="col-lg-12 offset-lg-12">
                 <h1>Bootstrap is awesome!</h1>
                 <h2>Сайты на Bootstrap отличные</h2>
@@ -57,7 +58,7 @@
         <!-- Секция 2 -->
         <section class="section-two ">
           <div class="container w">
-            <div class="row centered">
+            <div class="row text-center">
               <br><br>
               <div class="col-lg-4">
                 <i class="icon-heart-empty"></i>
@@ -84,29 +85,71 @@
         <!-- Секция 3 -->
         <section class="section-three pb-5 ">
           <div class="container z mt-5 mb-5">
-            <div class="row centered">
+            <div class="row text-center">
               <div class="col-12 mb-5 mt-5">
                 <h4 class="fs-1 fw-bold">Последние работы</h4>
               </div>
             </div>
 
-             <div class="row centerd">
+             <div class="row text-center">
               <div class="col-lg-4 d-flex justify-content-around">
-                <div class="tolt">
+                <div class="tilt">
                   <a href="#"><img src="img/iphone6-ios9-organize-apps-home.png" alt="" width="250px"></a>
                 </div>
               </div>
               <div class="col-lg-4 d-flex justify-content-around">
-                <div class="tolt">
+                <div class="tilt">
                   <a href="#"><img src="img/iphone6-ios9-organize-apps-home.png" alt="" width="250px"></a>
                 </div>
               </div>
               <div class="col-lg-4 d-flex justify-content-around">
-                <div class="tolt">
+                <div class="tilt">
                   <a href="#"><img src="img/iphone6-ios9-organize-apps-home.png" alt="" width="250px"></a>
                 </div>
               </div>
              </div>
+          </div>
+        </section>
+
+        <!-- Секция 4 -->
+        <section class="section-four">
+          <div class="container wb mt-5 mb-5">
+            <div class="row text-center">
+              <div class="col-lg-12">
+                <h4 class="fs-2 fw-bold pb-2">Мы создаем сайт</h4>
+                <p class="fs-4 pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus sunt maxime iure reiciendis beatae maiores recusandae magnam! Quas perspiciatis earum, consequatur commodi, nemo labore repudiandae facilis magni sit, molestias sequi?</p>
+              </div>
+            </div>
+
+            <div class="row ">
+              <div class="col-lg-12 d-flex justify-content-center">
+                <img src="img/27960_big.png" alt="" class="img-responsive">
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Секция 5 -->
+        <section class="section-five">
+          <div class="container mt-5 mb-5">
+            <div class="row text-center">
+              <h4 class="fs-2 fw-bold pb-2">Партнеры</h4>
+              <div class="col-lg-2 col-lg-offset-5">
+                <img src="logo/1624486324_90712_url.png" alt="" width="100px">
+              </div>
+              <div class="col-lg-2">
+                <img src="logo/5-2-superman-logo-png.png" alt="" width="100px">
+              </div>
+              <div class="col-lg-2">
+                <img src="logo/Fanta-Logo-2004.png" alt="" width="100px">
+              </div>
+              <div class="col-lg-2">
+                <img src="logo/logo-adidas-vector-png-32.png" alt="" width="100px">
+              </div>
+              <div class="col-lg-2">
+                <img src="logo/597a7035efcaa15d864652de.png" alt="" width="100px">
+              </div>
+            </div>
           </div>
         </section>
 
