--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item pe-2">
-                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#">Домой</a>
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#headerwrap">Домой</a>
                   </li>
                   <li class="nav-item pe-2">
-                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#">Про нас</a>
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#section-two">Про нас</a>
                   </li>
                   <li class="nav-item pe-2">
-                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#">Сервисы</a>
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#section-three">Сервисы</a>
                   </li>
                   <li class="nav-item pe-2">
-                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#">Работы</a>
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#section-four">Работы</a>
                   </li>
                   <li class="nav-item pe-2">
-                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#"><i class="icon-camera nav-icon"></i></a>
+                    <a class="nav-link active fs-5" style="color: #f85c37;" aria-current="page" href="#section-five"><i class="icon-camera nav-icon"></i></a>
                   </li>
                     </ul>
               </div>
@@ -44,7 +44,7 @@
         </header>
 
         <!-- Секция 1 -->
-        <section class="headerwrap">
+        <section class="headerwrap" id="headerwrap">
           <div class="container">
             <div class="row text-center">
               <div class="col-lg-12 offset-lg-12">
@@ -56,7 +56,7 @@
         </section>
 
         <!-- Секция 2 -->
-        <section class="section-two ">
+        <section class="section-two" id="section-two">
           <div class="container w">
             <div class="row text-center">
               <br><br>
@@ -83,7 +83,7 @@
         </section>
 
         <!-- Секция 3 -->
-        <section class="section-three pb-5 ">
+        <section class="section-three pb-5" id="section-three">
           <div class="container z mt-5 mb-5">
             <div class="row text-center">
               <div class="col-12 mb-5 mt-5">
@@ -112,7 +112,7 @@
         </section>
 
         <!-- Секция 4 -->
-        <section class="section-four">
+        <section class="section-four" id="section-four">
           <div class="container wb mt-5 mb-5">
             <div class="row text-center">
               <div class="col-lg-12">
@@ -130,28 +130,50 @@
         </section>
 
         <!-- Секция 5 -->
-        <section class="section-five">
-          <div class="container mt-5 mb-5">
+        <section class="section-five" id="section-five">
+          <div class="container mt-5  pb-5">
             <div class="row text-center">
-              <h4 class="fs-2 fw-bold pb-2">Партнеры</h4>
-              <div class="col-lg-2 col-lg-offset-5">
-                <img src="logo/1624486324_90712_url.png" alt="" width="100px">
+              <h4 class="fs-2 fw-bold pb-5 pt-5">Партнеры</h4>
+              <div class="col-lg-3 d-flex justify-content-center">
+                <img src="logo/1624486324_90712_url.png" alt="" width="auto" height="120" class="img-responsive">
               </div>
-              <div class="col-lg-2">
-                <img src="logo/5-2-superman-logo-png.png" alt="" width="100px">
+              <div class="col-lg-3 d-flex justify-content-center">
+                <img src="logo/5-2-superman-logo-png.png" alt="" width="auto" height="120" class="img-responsive">
               </div>
-              <div class="col-lg-2">
-                <img src="logo/Fanta-Logo-2004.png" alt="" width="100px">
+              <div class="col-lg-3 d-flex justify-content-center">
+                <img src="logo/Fanta-Logo-2004.png" alt="" width="auto" height="120" class="img-responsive">
               </div>
-              <div class="col-lg-2">
-                <img src="logo/logo-adidas-vector-png-32.png" alt="" width="100px">
-              </div>
-              <div class="col-lg-2">
-                <img src="logo/597a7035efcaa15d864652de.png" alt="" width="100px">
+              <div class="col-lg-3 d-flex justify-content-center">
+                <img src="logo/logo-adidas-vector-png-32.png" alt="" width="auto" height="120" class="img-responsive">
               </div>
             </div>
           </div>
         </section>
+
+        <!-- Секция 6 -->
+        <section class="section-six">
+          <div class="container   pb-5">
+            <div class="row text-center">
+              <div class="col-lg-12 ">
+                <h4 class="fs-2 fw-bold pb-5 pt-5" style="color: white;">Разработка сайтов на профессиональном уровне</h4>
+                <p class="fw-semibold" style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eveniet velit, alias quos quasi debitis tempore ut doloribus soluta deleniti, dolor laboriosam. Placeat ad cumque expedita saepe atque alias eos, amet facilis odio autem voluptates reprehenderit harum tempora vel dolore mollitia voluptatem facere, at nobis culpa sed fugit modi iste!</p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Футер -->
+        <footer class="footer">
+          <div class="container pt-5 pb-5">
+            <div class="row text-center">
+              <div class="col">
+                <a href="#"><i class="icon-instagram pe-5"></i></a>
+                <a href="#"><i class="icon-vkontakte pe-5"></i></a>
+                <a href="#"><i class="icon-paper-plane pe-5"></i></a>
+              </div>
+            </div>
+          </div>
+        </footer>
 
         <script src="bootstrap-5.2.0-dist/js/bootstrap.js"></script>
     </body>
